@@ -83,7 +83,7 @@ function varargout=msentropy(varargin)
        the calculation.
 
  Wrapper written by Ikaro Silva, 2013
- Last Modified: January 30, 2014
+ Last Modified: March 20, 2014
  Version 0.0.1
 
  Since 0.9.5
