@@ -82,8 +82,8 @@ function varargout=rdann(varargin)
 
 
  Written by Ikaro Silva, 2013
- Last Modified: January, 8, 2014
- Version 1.0.4
+ Last Modified: March 20, 2014
+ Version 1.0.5
  Since 0.0.1
 
  %Example 1- Read a signal and annotation from PhysioNet's Remote server:
