@@ -20,7 +20,7 @@
 
 function varargout=wrann(varargin)
 
- wrann(recordName,annotator,ann,AnnType,subType,chan,num)
+ wrann(recordName,annotator,ann,annType,subType,chan,num)
 
     Wrapper to WFDB WRANN:
          http://www.physionet.org/physiotools/wag/wrann-1.htm
@@ -56,7 +56,7 @@ function varargout=wrann(varargin)
        sample numbers (indices) with respect to the begining of the
        record.
 
- AnnType
+ annType
        Nx1 vector of the chars or scalar describing annotaion type. Default is 'N'.
 
  subType
@@ -89,8 +89,8 @@ err=sum(ann ~= ann2)
 wrann('mitdb/100','test',ann,type,subtype,chan,num);
 
  Written by Ikaro Silva, 2013
- Last Modified: December 10, 2013
- Version 1.2
+ Last Modified: March 6, 2014
+ Version 1.2.1
  Since 0.0.1
 
  See also RDANN, RDSAMP, WFDBDESC
